# mastodon2rss

./: .flake8  Dockerfile  README.md  activate  main.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: build-docker.yaml  test-docker.yaml
